@@ -1,3 +1,10 @@
+2022-10-02  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	[tmac]: Regression-test Savannah #63112 (3/3).
+
+	* tmac/tests/latin2_works: Do it.
+	* tmac/tmac.am (tmac_TESTS): Run test.
+
 2022-10-01  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	[tmac]: Fix Savannah #63112 (2/3).
